# indexedt

./: indexedt.cabal  stack.yaml
src/Control/Monad/: Indexed.hs
src/Control/Monad/Indexed/: Syntax.hs  Trans.hs
src/Control/Monad/Trans/: Indexed.hs
src/Control/Monad/Trans/Indexed/: Log.hs
src/Control/Monad/Trans/Indexed/Log/: Internal.hs
src/Data/Functor/: Indexed.hs
test/: Spec.hs
