name:                indexedt
version:             0.1.0.0
synopsis:            Indexed transformer of monads
description:         Please see README.md
homepage:            http://github.com/pseudonom/indexedt#readme
license:             MIT
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           2016 Eric Easley
category:            Control
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Indexed
                     , Control.Monad.Indexed.Syntax
                     , Control.Monad.Indexed.Trans
                     , Control.Monad.Trans.Indexed
                     , Control.Monad.Trans.Indexed.Log
                     , Control.Monad.Trans.Indexed.Log.Internal
                     , Data.Functor.Indexed
  build-depends:       base >= 4.7 && < 5
                     , HList
  default-language:    Haskell2010

test-suite indexedt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , indexedt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pseudonom/indexedt
